apps/monitoring/beszel/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: beszel
  name: beszel
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      app: beszel
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: beszel
    spec:
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
      containers:
      - name: beszel
        image: henrygd/beszel
        imagePullPolicy: Always
        # command: ["sh", "-c", "(sleep 10 && chmod a+rwx /run/user/1000/docker.sock) & /usr/bin/supervisord -c /etc/supervisord.conf"]
        ports:
          - name: web
            containerPort: 8090
            protocol: TCP
        volumeMounts:
        - name: beszel-data
          mountPath: /beszel_data
      volumes:
        - name: beszel-data
          persistentVolumeClaim:
            claimName: beszel-data
