apps/monitoring/beszel/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: beszel
  annotations:
    external-dns.alpha.kubernetes.io/hostname: beszel.lab.apj.dev
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-edit-in-place: "true"
    kubernetes.io/ingress.class: traefik-external
  labels:
    app: beszel
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`beszel.lab.apj.dev`)
      kind: Rule
      middlewares:
        - name: traefik-forward-auth
          namespace: traefik
      services:
        - name: beszel-internal
          port: 80
  tls:
    secretName: lab-apj-dev
# data:
#   resource.customizations: |
#     extensions/Ingress:
#         health.lua: |
#           hs = {}
#           hs.status = "Healthy"
#           return hs
